# backend/src/routes/admin.routes.js
@@ -1,0 +1,5 @@
+const router = require('express').Router()
+const { deneme } = require('../controllers/admin.controller')
+
+router.post('/', deneme)
+module.exports = router
