# backend/swagger-output.json
@@ -651,6 +651,19 @@
           }
         }
       }
+    },
+    "/admin/": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
     }
   },
   "definitions": {
